--- a/Jenny.properties
+++ b/Jenny.properties
@@ -42,7 +42,8 @@ Jenny.PostProcessors = Jenny.Plugins.AddFileHeaderPostProcessor, \
 Jenny.Server.Port = 3333
 Jenny.Client.Host = localhost
 Entitas.CodeGeneration.Plugins.Contexts = Game, \
-                                          Input
+                                          Input, \
+                                          GameState
 Entitas.CodeGeneration.Plugins.IgnoreNamespaces = false
 Jenny.Plugins.ProjectPath = Assembly-CSharp.csproj
 Jenny.Plugins.TargetDirectory = Assets
